some refactoring websocket messages logic updated descriptor for some attributes validation added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Something great</title>
-    <link rel="stylesheet" href="table.css">
+    <link rel="stylesheet" href="css/table.css">
 </head>
 <body>
 
-<script type="module" src="./main.js"></script>
+<script type="module" src="js/main.js"></script>
 
 <h2 class="center-position"> Last messages in the chat: </h2>
 
@@ -21,6 +21,9 @@
 
     <div id="sapper">
         <div id="game"></div>
+        <br><br><br>
+        <p>Fill parameters of field size:</p>
+        <br>
         Width: <input class="input"  id="width" type="number"><br>
         Height: <input class="input"  id="height" type="number"><br>
         <input class="button" id="start-game" type="button" value="Start the sapper game!">
